# sol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
eclipse/: CMakeLists.txt
eclipse/assets/settings/: imgui.ini
eclipse/assets/shaders/: flat_color.shader  tinted_texture.shader
eclipse/src/: DockspaceLayer.cpp  DockspaceLayer.h  ImGuiUtils.cpp  ImGuiUtils.h  Panels.cpp  Panels.h  main.cpp
example_app/: CMakeLists.txt
example_app/assets/fonts/Early GameBoy/: license.txt
example_app/assets/shaders/: texture.shader  tinted_texture.shader
example_app/src/: main.cpp
sol/: CMakeLists.txt  sol.h
sol/src/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Platform.cpp  Platform.h  RenderingContext.h  Timestep.h  Utils.cpp  Utils.h  Window.h
sol/src/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
sol/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
sol/src/Platform/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
sol/src/Platform/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
sol/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatform.cpp  WindowsWindow.cpp  WindowsWindow.h
sol/src/Renderer/: Buffers.cpp  Buffers.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  OpenGLContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Subtexture2D.cpp  Subtexture2D.h  Texture.cpp  Texture.h
sol/src/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
utils/: key_code_renaming.py  post_build.py  pre_commit.py
